--- a/CSS/another-one.css
+++ b/CSS/another-one.css
@@ -67,11 +67,14 @@ textarea{
     color:#faf8f7
   }
 
+  
+
   .tabble-container{
     justify-content:center;
     display:flex;
     align-items:center;
-    max-height:200vh;
+    max-height:fit-content;
+    padding:3rem 0rem;
     width:fit-content;
     border:1px solid #fff;
     border-radius:15px;
